--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@things-factory/board-provider-gql",
-  "version": "0.0.4",
+  "version": "0.9.0",
   "main": "src/index.js",
   "things-factory": true,
   "license": "MIT",
@@ -12,9 +12,9 @@
     "migration": "things-factory-migration"
   },
   "dependencies": {
-    "@things-factory/board-base": "*",
-    "@things-factory/provider-base-gql": "*",
-    "@things-factory/shell": "*"
+    "@things-factory/board-service": "^0.9.0",
+    "@things-factory/provider-base-gql": "^0.9.0",
+    "@things-factory/shell": "^0.9.1"
   },
   "devDependencies": {}
 }
